[project]
name = "lua2meta"
version = "1.0.0"
description = "Decrypt steam manifest files"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "luaparser>=3.3.0",
    "steam[client]>=1.4.4",
    "urlpath>=2.0.0",
    "vdf>=3.4",
]

[tool.uv.sources]
# This yet unreleased version removes unwarranted AST prints
luaparser = { git = "git+https://github.com/boolangery/py-lua-parser", tag = "3.3.1" }

[project.scripts]
lua2meta = "lua2meta:main"

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"
