[project]
name = "lua2meta"
version = "1.1.8"
description = "Decrypt steam manifest files"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "steam[client]>=1.4.4",
    "urlpath>=2.0.0",
    "vdf>=3.4",
    # "luaparser>=3.3.1",
    # This yet unreleased version removes unwarranted AST prints
    "luaparser@git+https://github.com/boolangery/py-lua-parser@615322f0d3f7a7a736955327bcf03a90595cebdd",
]

[project.scripts]
lua2meta = "lua2meta:main"

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 140
